# bootspec-secureboot

./: .gitignore  Cargo.toml  README.md  flake.nix  nixos-module.nix  pcr-test.nix  rfc.md  synthesize-many.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  update.yml
bootspec/: Cargo.toml  README.md
bootspec/src/: lib.rs  v1.rs
cases/: 15.09-plain.nix  16.03-plain.nix  16.09-plain.nix  17.03-plain.nix  17.09-plain.nix  18.03-plain.nix  18.09-plain.nix  19.03-plain.nix  19.09-plain.nix  20.03-plain.nix  20.09-plain.nix  21.05-plain.nix  21.11-plain.nix  21.11-specialisations.nix  verify.sh
cases/expected-synthesis/: 15.09-plain.json  16.09-plain.json  18.09-plain.json  19.03-plain.json  19.09-plain.json  21.05-plain.json  21.11-specialisations.json
cases/expected-synthesis/16.03-plain/: boot.v1.json
cases/expected-synthesis/17.03-plain/: boot.v1.json
cases/expected-synthesis/17.09-plain/: boot.v1.json
cases/expected-synthesis/18.03-plain/: boot.v1.json
cases/expected-synthesis/20.03-plain/: boot.v1.json
cases/expected-synthesis/20.09-plain/: boot.v1.json
cases/expected-synthesis/21.11-plain/: boot.v1.json
cases/expected-synthesis/21.11-specialisations/: boot.v1.json
cases/expected-synthesis/21.11-specialisations/specialisation/: example.json
generator/: Cargo.toml  README.md
generator/src/: bootable.rs  lib.rs  main.rs  structs.rs
generator/src/bootable/: efi.rs  mod.rs  pcr.rs  toplevel.rs
generator/src/grub/: mod.rs
generator/src/systemd_boot/: entry.rs  mod.rs
installer/: Cargo.toml  README.md  build.rs  pad-files-without-signature.diff  patched-sbattach.nix
installer/src/: cli.rs  files.rs  main.rs  options.rs  secure_boot.rs  util.rs
installer/src/systemd_boot/: mod.rs  plan.rs
installer/src/systemd_boot/version/: mod.rs  systemd.rs  systemd_boot.rs
src/: main.rs
synthesize/: Cargo.toml  README.md
synthesize/src/: lib.rs  main.rs
