[package]
name = "generator"
version = "0.1.0"
authors = ["Cole Helbling <cole.helbling@determinate.systems>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/main.rs"
doctest = false

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
regex = { version = "1.6.0" }
serde_json = "1.0.91"
tempfile = "3.3.0"
structopt = { version = "0.3.26", default-features = false }
bootspec = { git = "https://github.com/DeterminateSystems/bootspec", branch = "main" }
