[package]
name = "installer"
version = "0.1.0"
authors = ["Cole Helbling <cole.helbling@determinate.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
env_logger = { version = "0.9.0", default-features = false }
glob = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.116"
log = "0.4.14"
# generator = { path = "../generator" }
pico-args = { version = "0.4.2", default-features = false, features = ["eq-separator", "combined-flags"] }
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode"] }
tempfile = "3.3.0"
walkdir = "2.3.2"
# askama = "0.10.5"
