[package]
name = "installer"
version = "0.1.0"
authors = ["Cole Helbling <cole.helbling@determinate.systems>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
crc = "3.0.1"
env_logger = { version = "0.10.0", default-features = false }
glob = "0.3.0"
lazy_static = "1.4.0"
libc = "0.2.139"
log = "0.4.17"
# generator = { path = "../generator" }
regex = { version = "1.7.1", default-features = false, features = ["std", "unicode"] }
tempfile = "3.4.0"
walkdir = "2.3.2"
# askama = "0.10.5"
